--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -94,6 +94,9 @@
                 <a class="nav-link" th:href="@{/admin/tutorpracticas/listar}">
                     <i class="bi bi-briefcase me-2"></i>Tutores Prácticas
                 </a>
+				<a class="nav-link" th:href="@{/admin/evaluacion/listar}">
+				    <i class="bi bi-briefcase me-2"></i>Evaluaciones
+				</a>
             </div>
             
             <!-- Tutor Curso Menu -->
